eSports page complete

--- a/HTML/esports.html
+++ b/HTML/esports.html
@@ -34,6 +34,262 @@
         </div>
     </div>
     <body>
-        <main>This is the esports page</main>
+        <!-- Featured Games Section -->
+        <section class="featured-games">
+            <div class="section-title">
+                <h2>Featured Games</h2>
+                <div class="line"></div>
+            </div>
+            <div class="game-list">
+                <!-- Featured Game 1 -->
+                <div class="game-card">
+                    <div class="game-header">
+                        <div class="team-info left-team">
+                            <img
+                                src="/images/genglogo.png"
+                                alt="Team 1 Logo"
+                                class="team-logo"
+                            />
+                            <p>Gen</p>
+                        </div>
+                        <div class="game-score">
+                            <p><strong>Score:</strong> 3 - 2</p>
+                        </div>
+                        <div class="team-info right-team">
+                            <p>Fly</p>
+                            <img
+                                src="/images/flylogo.png"
+                                alt="Team 2 Logo"
+                                class="team-logo"
+                            />
+                        </div>
+                    </div>
+                    <!-- Video Embed -->
+                    <div class="game-video">
+                        <iframe
+                            width="100%"
+                            height="315"
+                            src="https://www.youtube.com/embed/cuYK1A2dwoo"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                    </div>
+                    <div class="game-details">
+                        <div class="details-center">
+                            <p class="tournament-name">
+                                Worlds • Quarterfinals
+                            </p>
+                            <p class="match-type">5v5</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Featured Game 2 -->
+                <div class="game-card">
+                    <div class="game-header">
+                        <div class="team-info left-team">
+                            <img
+                                src="/images/teslogo.png"
+                                alt="Team 3 Logo"
+                                class="team-logo"
+                            />
+                            <p>Tes</p>
+                        </div>
+                        <div class="game-score">
+                            <p><strong>Score:</strong> 0 - 3</p>
+                        </div>
+                        <div class="team-info right-team">
+                            <p>T1</p>
+                            <img
+                                src="/images/t1logoreal.png"
+                                alt="Team 4 Logo"
+                                class="team-logo"
+                            />
+                        </div>
+                    </div>
+                    <!-- Video Embed -->
+                    <div class="game-video">
+                        <iframe
+                            width="100%"
+                            height="315"
+                            src="https://www.youtube.com/embed/I80CHixcUCo"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                    </div>
+                    <div class="game-details">
+                        <div class="details-center">
+                            <p class="tournament-name">
+                                Challengers JPN • Playoffs
+                            </p>
+                            <p class="match-type">5v5</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Featured Game 3 -->
+                <div class="game-card">
+                    <div class="game-header">
+                        <div class="team-info left-team">
+                            <img
+                                src="/images/g2logo.png"
+                                alt="Team 1 Logo"
+                                class="team-logo"
+                            />
+                            <p>G2</p>
+                        </div>
+                        <div class="game-score">
+                            <p><strong>Score:</strong> 1 - 2</p>
+                        </div>
+                        <div class="team-info right-team">
+                            <p>BLG</p>
+                            <img
+                                src="/images/blglogo.png"
+                                alt="Team 2 Logo"
+                                class="team-logo"
+                            />
+                        </div>
+                    </div>
+                    <!-- Video Embed -->
+                    <div class="game-video">
+                        <iframe
+                            width="100%"
+                            height="315"
+                            src="https://www.youtube.com/embed/5EeaOFtv9fc"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                    </div>
+                    <div class="game-details">
+                        <div class="details-center">
+                            <p class="tournament-name">Worlds • Swiss</p>
+                            <p class="match-type">5v5</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Featured Game 4 -->
+                <div class="game-card">
+                    <div class="game-header">
+                        <div class="team-info left-team">
+                            <img
+                                src="/images/psglogo.png"
+                                alt="Team 1 Logo"
+                                class="team-logo"
+                            />
+                            <p>PSG</p>
+                        </div>
+                        <div class="game-score">
+                            <p><strong>Score:</strong> 2 - 0</p>
+                        </div>
+                        <div class="team-info right-team">
+                            <p>100T</p>
+                            <img
+                                src="/images/100tlogo.png"
+                                alt="Team 2 Logo"
+                                class="team-logo"
+                            />
+                        </div>
+                    </div>
+                    <!-- Video Embed -->
+                    <div class="game-video">
+                        <iframe
+                            width="100%"
+                            height="315"
+                            src="https://www.youtube.com/embed/UYj9nLDE-JI"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                    </div>
+                    <div class="game-details">
+                        <div class="details-center">
+                            <p class="tournament-name">Worlds • Play-ins</p>
+                            <p class="match-type">5v5</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Featured Game 5 -->
+                <div class="game-card">
+                    <div class="game-header">
+                        <div class="team-info left-team">
+                            <img
+                                src="/images/gamlogo.png"
+                                alt="Team 1 Logo"
+                                class="team-logo"
+                            />
+                            <p>GAM</p>
+                        </div>
+                        <div class="game-score">
+                            <p><strong>Score:</strong> 2 - 0</p>
+                        </div>
+                        <div class="team-info right-team">
+                            <p>SHG</p>
+                            <img
+                                src="/images/shglogo.png"
+                                alt="Team 2 Logo"
+                                class="team-logo"
+                            />
+                        </div>
+                    </div>
+                    <!-- Video Embed -->
+                    <div class="game-video">
+                        <iframe
+                            width="100%"
+                            height="315"
+                            src="https://www.youtube.com/embed/snLiSiJ1Pc8"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                    </div>
+                    <div class="game-details">
+                        <div class="details-center">
+                            <p class="tournament-name">Worlds • Play-ins</p>
+                            <p class="match-type">5v5</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="game-footer">
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img
+                        src="/images/mainlogo.png"
+                        alt="Game Logo"
+                        class="logo"
+                    />
+                    <p>&copy; 2024 NexusNews. All Rights Reserved.</p>
+                </div>
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="terms.html">Terms of Service</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <div class="social">
+                        <a href="#" title="Facebook"
+                            ><i class="bx bxl-facebook"></i
+                        ></a>
+                        <a href="#" title="Twitter"
+                            ><i class="bx bxl-twitter"></i
+                        ></a>
+                        <a href="#" title="Instagram"
+                            ><i class="bx bxl-instagram-alt"></i
+                        ></a>
+                        <a href="#" title="LinkedIn"
+                            ><i class="bx bxl-linkedin-square"></i
+                        ></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
