--- a/HTML/champions/nasus.html
+++ b/HTML/champions/nasus.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Maphite</title>
-        <link rel="stylesheet" href="/CSS/guides.css" />
+        <link rel="stylesheet" href="/CSS/champhtml.css" />
         <link rel="images" href="/images/" />
     </head>
 
